--- a/fr39_domination.html
+++ b/fr39_domination.html
@@ -33,11 +33,11 @@
 
             // ⚠️⚠️⚠️ CHANGE CES 3 LIENS AVEC TES VRAIS LIENS GITHUB ⚠️⚠️⚠️
             // Exemple : https://raw.githubusercontent.com/TON_PSEUDO/grepolis/main/alliances.txt
-            const GITHUB_URLS = {
-                alliances: 'https://raw.githubusercontent.com/sdurand-sdd/grepolis/main/alliances.txt',
-                players: 'https://raw.githubusercontent.com/sdurand-sdd/grepolis/main/players.txt',
-                towns: 'https://raw.githubusercontent.com/sdurand-sdd/grepolis/main/towns.txt'
-            };
+           const GITHUB_URLS = {
+    alliances: 'https://sdurand-sdd.github.io/grepolis/alliances.txt',
+    players: 'https://sdurand-sdd.github.io/grepolis/players.txt',
+    towns: 'https://sdurand-sdd.github.io/grepolis/towns.txt'
+};
 
             // Fonction pour charger depuis GitHub
             const loadFromGitHub = async () => {
