--- a/monde.html
+++ b/monde.html
@@ -46,9 +46,9 @@
         
         // URLs des fichiers sur GitHub (format brut)
         const GITHUB_URLS = {
-             alliances: 'https://sdurand-sdd.github.io/grepolis/alliances.txt',
-                players: 'https://sdurand-sdd.github.io/grepolis/players.txt',
-                towns: 'https://sdurand-sdd.github.io/grepolis/towns.txt'
+             alliances: 'https://sdurand-sdd.github.io/grepolis/main/alliances.txt',
+                players: 'https://sdurand-sdd.github.io/grepolis/main/players.txt',
+                towns: 'https://sdurand-sdd.github.io/grepolis/main/towns.txt'
         };
 
         // Fonction pour charger un fichier depuis GitHub
