--- a/monde.html
+++ b/monde.html
@@ -48,7 +48,7 @@
         const GITHUB_URLS = {
              alliances: 'https://raw.githubusercontent.com/sdurand-SDD/grepolis/main/alliances.txt',
                 players: 'https://raw.githubusercontent.com/sdurand-SDD/grepolis/main/players.txt',
-                towns: 'https://raw.githubusercontent.com/sdurand-SDD/grepolis/main/towns.txt'
+                towns: 'https://sdurand-sdd.github.io/grepolis/towns.txt'
         };
 
         // Fonction pour charger un fichier depuis GitHub
