--- a/fr39_joueurs3.html
+++ b/fr39_joueurs3.html
@@ -714,7 +714,7 @@
                         {/* Zone de la carte */}
                         <div 
                             ref={mapRef} 
-                            className="flex-1 map-container relative"
+                            className="flex-1 map-container relative overflow-hidden" 
                             onMouseDown={handleMouseDown}
                             onMouseMove={handleMouseMove}
                             onMouseUp={handleMouseUp}
