--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <main class="w-full max-w-4xl">
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
 
-            <a href="domination.html" class="card-link block p-6 bg-slate-800 rounded-xl shadow-lg border-t-4 border-amber-500">
+            <a href="fr39_domination2.html" class="card-link block p-6 bg-slate-800 rounded-xl shadow-lg border-t-4 border-amber-500">
                 <div class="flex items-center justify-between mb-3">
                     <h2 class="text-2xl font-semibold text-amber-400">Carte de Domination</h2>
                     <svg class="w-8 h-8 text-amber-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -48,7 +48,7 @@
                 <span class="mt-4 inline-block text-amber-400 font-medium">Accéder &rarr;</span>
             </a>
 
-            <a href="mers.html" class="card-link block p-6 bg-slate-800 rounded-xl shadow-lg border-t-4 border-blue-500">
+            <a href="fr39_mers.html" class="card-link block p-6 bg-slate-800 rounded-xl shadow-lg border-t-4 border-blue-500">
                 <div class="flex items-center justify-between mb-3">
                     <h2 class="text-2xl font-semibold text-blue-400">Statistiques par Mers</h2>
                     <svg class="w-8 h-8 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -59,7 +59,7 @@
                 <span class="mt-4 inline-block text-blue-400 font-medium">Accéder &rarr;</span>
             </a>
 
-            <a href="joueurs.html" class="card-link block p-6 bg-slate-800 rounded-xl shadow-lg border-t-4 border-green-500">
+            <a href="fr39_joueurs.html" class="card-link block p-6 bg-slate-800 rounded-xl shadow-lg border-t-4 border-green-500">
                 <div class="flex items-center justify-between mb-3">
                     <h2 class="text-2xl font-semibold text-green-400">Classement & Joueurs</h2>
                     <svg class="w-8 h-8 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
