--- a/new_map.html
+++ b/new_map.html
@@ -41,9 +41,19 @@
             const [loading, setLoading] = useState(true);
             const [hoveredTown, setHoveredTown] = useState(null);
 
-            // Coordonnées de l'Océan 24
             const minX = 200, maxX = 299;
             const minY = 400, maxY = 499;
+
+            // --- FONCTION DE DECODAGE DES ACCENTS ---
+            const decodeGrepolisName = (str) => {
+                if (!str) return "";
+                try {
+                    // Remplace les + par des espaces, puis décode l'URL
+                    return decodeURIComponent(str.replace(/\+/g, ' '));
+                } catch (e) {
+                    return str; // Retourne le texte brut en cas d'erreur
+                }
+            };
 
             useEffect(() => {
                 const fetchData = async () => {
@@ -56,7 +66,10 @@
                         const pData = {};
                         pRes.split('\n').forEach(line => {
                             const p = line.split(',');
-                            if (p.length >= 2) pData[p[0]] = p[1];
+                            if (p.length >= 2) {
+                                // On décode le nom du joueur ici
+                                pData[p[0]] = decodeGrepolisName(p[1]);
+                            }
                         });
 
                         const tData = [];
@@ -69,7 +82,8 @@
                                     tData.push({
                                         id: p[0],
                                         player_name: pData[p[1]] || "Inconnu",
-                                        name: p[2],
+                                        // On décode le nom de la ville ici
+                                        name: decodeGrepolisName(p[2]),
                                         x: x,
                                         y: y,
                                         points: p[6]
@@ -83,7 +97,6 @@
                 };
                 fetchData();
             }, []);
-
             const filteredTowns = useMemo(() => {
                 if (!searchTerm || searchTerm.length < 2) return [];
                 return towns.filter(t => t.player_name.toLowerCase().includes(searchTerm.toLowerCase()));
