--- a/fr39_mers.html
+++ b/fr39_mers.html
@@ -38,6 +38,16 @@
 
             // --- Fonctions utilitaires ---
 
+            // Décoder les noms encodés en URL (ex: %2B, %20, accents, etc.)
+            const decodeName = (str) => {
+                if (!str) return str;
+                try {
+                    return decodeURIComponent(str.trim().replace(/\+/g, ' '));
+                } catch (e) {
+                    return str.trim().replace(/\+/g, ' ');
+                }
+            };
+
             // Générer une couleur pour chaque alliance
             const generateColor = (index) => {
                 const colors = [
@@ -112,7 +122,7 @@
                             if (parts.length >= 2) {
                                 alliancesData[parts[0]] = {
                                     id: parts[0],
-                                    name: parts[1],
+                                    name: decodeName(parts[1]),
                                     points: parts[2] || '0',
                                     towns: parts[3] || '0',
                                     members: parts[4] || '0',
@@ -132,7 +142,7 @@
                             if (parts.length >= 2) {
                                 playersData[parts[0]] = {
                                     id: parts[0],
-                                    name: parts[1],
+                                    name: decodeName(parts[1]),
                                     alliance_id: parts[2] || null,
                                     points: parts[3] || '0',
                                     rank: parts[4] || '0',
@@ -161,7 +171,7 @@
                                 townsData.push({
                                     id: parts[0],
                                     player_id: parts[1],
-                                    name: parts[2],
+                                    name: decodeName(parts[2]),
                                     x: x,
                                     y: y,
                                     island: parts[5],
